--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
             const intervalId = setInterval(() => {
                 if (window.getComputedStyle(document.querySelector('.loading')).display === 'block') {
                     count++;
-                    console.log(count);
+                    // console.log(count);
                 } else {
                     clearInterval(intervalId);
                 }
